# routes/api.php
@@ -7,7 +7,8 @@ use App\Http\Controllers\API\AnggaranSwaggerController;
 use App\Http\Controllers\API\KategoriSwaggerController;
 use App\Http\Controllers\API\TransaksiSwaggerController;
 use App\Http\Controllers\API\LaporanKeuanganSwaggerController;
-use App\Http\Controllers\AuthController;
+use App\Http\Controllers\API\AuthController;
+
 
 // Kategori
 Route::get('kategoris', [KategoriSwaggerController::class, 'index']);
@@ -22,6 +23,7 @@ Route::post('anggaran', [AnggaranSwaggerController::class, 'store']);
 Route::get('anggaran/{id}', [AnggaranSwaggerController::class, 'show']);
 Route::put('anggaran/{id}', [AnggaranSwaggerController::class, 'update']);
 Route::delete('anggaran/{id}', [AnggaranSwaggerController::class, 'destroy']);
+Route::get('anggaran/user/{user_id}', [AnggaranSwaggerController::class, 'getByUserId']);
 
 // User
 Route::get('users', [UserSwaggerController::class, 'index']);
@@ -36,6 +38,8 @@ Route::post('transaksi', [TransaksiSwaggerController::class, 'store']);
 Route::get('transaksi/{id}', [TransaksiSwaggerController::class, 'show']);
 Route::put('transaksi/{id}', [TransaksiSwaggerController::class, 'update']);
 Route::delete('transaksi/{id}', [TransaksiSwaggerController::class, 'destroy']);
+Route::get('/transaksi/user/{user_id}', [TransaksiSwaggerController::class, 'getByUser']);
+
 
 // Laporan Keuangan
 Route::get('laporan-keuangans', [LaporanKeuanganSwaggerController::class, 'index']);
@@ -43,6 +47,7 @@ Route::post('laporan-keuangans', [LaporanKeuanganSwaggerController::class, 'stor
 Route::get('laporan-keuangans/{id}', [LaporanKeuanganSwaggerController::class, 'show']);
 Route::put('laporan-keuangans/{id}', [LaporanKeuanganSwaggerController::class, 'update']);
 Route::delete('laporan-keuangans/{id}', [LaporanKeuanganSwaggerController::class, 'destroy']);
+Route::get('laporan-keuangans/user/{user_id}', [LaporanKeuanganSwaggerController::class, 'getByUser']);
 
 // Auth
 Route::post('register', [AuthController::class, 'register']);
